# unreliable-deform-manipulation

./: .gitignore  README.md  spec-file.txt
arm_gazebo/arm_gazebo_models/: CMakeLists.txt  package.xml
arm_gazebo/arm_gazebo_plugins/: CMakeLists.txt  package.xml
jsk_recognition_msgs/: CMakeLists.txt  package.xml
latent_constraint_learning/: CMakeLists.txt  package.xml
link_bot_description/: CMakeLists.txt  model.config  package.xml
link_bot_description/config/: link_bot_control.yaml
link_bot_description/launch/: link_bot_control.launch  link_bot_description.launch  rope_description.launch  view.launch
link_bot_description/rviz/: link_bot.rviz
link_bot_description/sdf/: 10_link.sdf  2_link.sdf  car.sdf  long_rope.sdf  long_tethered.sdf  model.config  old_derp_point.sdf  point_robot.sdf  real_rope.sdf  rope.erb  rope_universal_joints.erb  short_rope.sdf  short_rope_2d.sdf  short_rope_3d.sdf  tethered_car.erb  tethered_car.sdf  tethered_derp.sdf  tethered_point_robot.erb  tethered_point_robot.sdf
link_bot_description/urdf/: 2_link.rb  2_link_bot.urdf  2_link_bot_small.urdf  2_link_small.rb  7_link.rb  7_link_bot.urdf  colorful_link_bot.sdf  colorful_link_bot.urdf  five_link_bot.urdf  link_bot.urdf  multi_link_bot.erb  multi_link_bot.urdf  rope.erb  rope.sdf  rope.urdf  rope2.erb  test.sdf  textured_link_bot.sdf
link_bot_gaussian_process/: .gitignore  CMakeLists.txt  data  metrics.md  package.xml  setup.py
link_bot_gaussian_process/notebooks/: 240_50_random4.npz  Fit GP to 2D point robot.ipynb  Fit GP to link bot.ipynb  Fit GP to point robot.ipynb  Fit Single GP to Link Bot.ipynb  Moment Matching Tutorial.ipynb  Roll Out GP.ipynb  data  fast GPflow.ipynb
link_bot_gaussian_process/scripts/: compare_gp_to_true_gazebo.py  evaluate_stretching.py  rollout_gp_from_gazebo.py  test_dataset.py  train_gp.py  train_link_bot_gps.py
link_bot_gaussian_process/test/: test_moment_matching.py
link_bot_gazebo/: .gitignore  CMakeLists.txt  custom_rosconsole.conf  package.xml  sdf_speed_data.csv  setup.py
link_bot_gazebo/actions/: debugging.csv  down.csv
link_bot_gazebo/launch/: 10_link_no_obs.launch  10_link_obs.launch  car.launch  cdcpd.launch  corridor1.launch  corridor2.launch  culdesac.launch  derp_point.launch  derp_tether.launch  dual_floating.launch  dual_grippers.launch  empty.launch  floating_grippers.launch  gazebo.launch  gazebo_dragging.launch  gazebo_just_moveit.launch  gazebo_mock.launch  gazebo_no_moveit.launch  gazebo_val.launch  gazebo_victor.launch  image_view.launch  kinect_static_transforms.launch  link_bot_gazebo.launch  link_bot_gazebo_obstacles.launch  link_bot_gazebo_obstacles_1.launch  link_bot_gazebo_obstacles_2.launch  link_bot_gazebo_obstacles_barrier.launch  link_bot_gazebo_obstacles_barrier_1.launch  link_bot_gazebo_obstacles_barrier_2.launch  link_bot_gazebo_obstacles_simple.launch  long_rope.launch  main.launch  mlink_bot_gazebo_obstacles_1.launch  multi_link_bot.launch  multi_link_bot_teleop.launch  n_link.launch  n_link_bot.launch  n_link_bot_obstacles.launch  n_link_bot_teleop.launch  no_tether.launch  (+32 more)
link_bot_gazebo/msg/: LinkBotAction.msg  LinkBotForceAction.msg  LinkBotVelocityAction.msg  ModelsPoses.msg  MultiLinkBotPositionAction.msg  NamedPoints.msg  ObjectAction.msg  Position2dAction.msg  WriteSDF.msg
link_bot_gazebo/plugins/: ContactPlugin.cpp  ContactPlugin.h  arm_video_recorder_plugin.cpp  car_plugin.cpp  car_plugin.h  collision_map_plugin.cpp  collision_map_plugin.h  dual_gripper_plugin.cpp  dual_gripper_plugin.h  enumerate.h  gazebo_plugin_utils.cpp  gazebo_ros_moveit_planning_scene.cpp  gazebo_ros_moveit_planning_scene.h  gazebo_ros_tf_plugin.cpp  gazebo_ros_tf_plugin.h  kinematic_val_plugin.cpp  kinematic_val_plugin.h  kinematic_victor_plugin.cpp  kinematic_victor_plugin.h  linkbot_model_plugin.cpp  linkbot_model_plugin.h  linkbot_visual_plugin.cpp  linkbot_visual_plugin.h  multi_link_bot_model_plugin.cpp  multi_link_bot_model_plugin.h  my_camera_plugin.cpp  position_2d_plugin.cpp  position_2d_plugin.h  position_3d_plugin.cpp  position_3d_plugin.h  rope_plugin.cpp  rope_plugin.h  rosparam_plugin.cpp  stepping_plugin.cpp  test_ray_plugin.cpp  test_ray_plugin.h  tether_plugin.cpp  tether_plugin.h
link_bot_gazebo/scripts/: dual_gripper_action_forwarder.py  get_intertia.py  log_states_and_actions.py  make_box.py  republish_gz_camera.py  set_rope_config.py  setup_tether.py  square.py  start_config.py  test_occupancy_service.py  test_sdf_service.py  test_traj_srv.py
link_bot_gazebo/src/: base_link_position_controller.cpp  collision_map_plugin.cpp  dual_gripper_plugin.cpp  gazebo_plugin_utils.cpp  gazebo_ros_moveit_planning_scene.cpp  gazebo_ros_moveit_planning_scene.h  gazebo_ros_tf_plugin.cpp  gazebo_ros_tf_plugin.h  kinematic_robotiq_3f_gripper_plugin.cpp  link_position_3d_kinematic_controller.cpp  link_position_3d_pid_controller.cpp  mymath.cpp  position_3d_plugin.cpp  position_3d_plugin.h  rope_plugin.cpp  rope_plugin.h  rosparam_plugin.cpp  (+1 more)
link_bot_planning/: .gitignore  CMakeLists.txt  actions  classifier_sensitivity_config.hjson  classifiers  fwd_model_data  labeling_params  obs-2  package.xml  setup.py  temp-plot.html  test_random_rope_config.py
link_bot_pycommon/: CMakeLists.txt  package.xml  setup.py
link_bot_sdf_tools/: CMakeLists.txt  package.xml  setup.py
merrrt_visualization/: CMakeLists.txt  color_filter_widget_description.xml  merrrt_widget_description.xml  package.xml  rviz_animation_controller_description.xml  setup.py
moonshine/: CMakeLists.txt  package.xml  setup.py
peter_msgs/: CMakeLists.txt  package.xml  setup.py
physical_robot_3d_rope_shim/: CMakeLists.txt  package.xml
rqt_robot_data_collection/: CMakeLists.txt  package.xml  plugin.xml  setup.py
state_space_dynamics/: .gitignore  CMakeLists.txt  classifier_data  gp_log_data  labeling_params  package.xml  setup.py
victor/: CMakeLists.txt  package.xml  setup.py
victor_3d_rope/: CMakeLists.txt  package.xml
victor_3d_rope_shim/: CMakeLists.txt  package.xml
viz_stepper/: CMakeLists.txt  package.xml  plugin_description.xml  setup.py
(+1937 files in other folders)
