<?xml version="1.0"?>
<package format="2">
  <name>latent_constraint_learning</name>
  <version>0.0.0</version>
  <description>The latent_constraint_learning package</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>

  <license>GPLv3</license>

  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
