<?xml version="1.0"?>
<package>
  <name>link_bot_description</name>
  <version>0.0.0</version>
  <description>URDF Files for link bot</description>

  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/urdf"/>
    <gazebo_ros gazebo_media_path="${prefix}/urdf"/>
  </export>
</package>
