<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>link_bot_gaussian_process</name>
  <version>0.0.0</version>
  <description>gaussian process</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

</package>
