<package format="2">
  <name>link_bot_gazebo</name>
  <version>0.0.0</version>
  <description>link bot gazebo</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>sdf_tools</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>link_bot_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>

   <export>
     <gazebo_ros gazebo_media_path="${prefix}/Media" />
     <gazebo_ros gazebo_model_path="${prefix}/Media/models" />
     <gazebo_ros gazebo_plugin_path="${prefix}/lib" />
   </export>
</package>
