<package format="2">
  <name>link_bot_gazebo</name>
  <version>0.0.0</version>
  <description>link bot gazebo</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>arm_video_recorder</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>control_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>sdf_tools</depend>
  <depend>peter_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>victor_hardware_interface</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <exec_depend>link_bot_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/Media" />
    <gazebo_ros gazebo_model_path="${prefix}/Media/models" />
  </export>
</package>
