<?xml version="1.0"?>
<package format="2">
  <name>link_bot_pycommon</name>
  <version>0.0.0</version>
  <description>jupyter pycommon</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
