<?xml version="1.0"?>
<package format="2">
  <name>link_bot_pycommon</name>
  <version>0.0.0</version>
  <description>jupyter pycommon</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <depend>pybind11_catkin</depend>
  <depend>std_msgs</depend>
  <depend>tf2-sensors-msgs</depend>
  <depend>roscpp</depend>
  <depend>moveit_commander</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros_link_attacher</exec_depend>
  <exec_depend>ros-noetic-rospy-message-converter</exec_depend>
  <!-- TODO: properly list dependencies -->

</package>
