<package format="2">
  <name>merrrt_visualization</name>
  <version>0.0.0</version>
  <description>visualization</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>peter_msgs</depend>
  <depend>rviz</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <rviz plugin="${prefix}/merrrt_widget_description.xml"/>
    <rviz plugin="${prefix}/rviz_animation_controller_description.xml"/>
  </export>
</package>
