<?xml version="1.0"?>
<package format="2">
  <name>victor</name>
  <version>0.0.0</version>
  <description>communicating with victor</description>

  <maintainer email="pmitrano@umich.edu">pmitrano</maintainer>


  <license>BSD</license>

  <author >Peter Mitrano</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>

</package>
