<?xml version="1.0"?>
<package format="2">
  <name>victor_3d_rope</name>
  <version>0.0.0</version>
  <description>Files for combined Victor and rope model in Gazebo</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>victor_moveit_config</exec_depend>
  <exec_depend>victor_gazebo_plugins</exec_depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>gazebo_ros</test_depend>
  <test_depend>gazebo_ros_control</test_depend>
  <test_depend>joint_state_controller</test_depend>
  <test_depend>joint_trajectory_controller</test_depend>
  <test_depend>moveit_resources</test_depend>
  <test_depend>moveit_ros_visualization</test_depend>
  <test_depend>moveit_simple_controller_manager</test_depend>
  <test_depend>position_controllers</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rviz</test_depend>

  <!-- https://answers.gazebosim.org//question/6568/uri-paths-to-packages-in-the-sdf-model-file/ -->
  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_media_path="${prefix}/Media" />
    <gazebo_ros gazebo_model_path="${prefix}/Media/models" />
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" />
  </export>
</package>
