<?xml version="1.0"?>
<package format="2">
  <name>victor_3d_rope_shim</name>
  <version>0.0.0</version>
  <description>Files for shim between link_bot execution code and Victor</description>
  <maintainer email="pmitrano@umich.edu">Peter Mitrano</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>arc_utilities</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pcl_ros</depend>
  <depend>peter_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>victor_hardware_interface</depend>

  <!-- <exec_depend>victor_moveit_config</exec_depend> -->
</package>
